【调整】更新项目配置信息

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,9 +1,9 @@
 ---
-import YukinaConfig from "../../yukina.config";
+import MeorinConfig from "../../meorin.config";
 import BaseHead from "../components/BaseHead.astro";
 ---
 
-<html lang={YukinaConfig.locale}>
+<html lang={MeorinConfig.locale}>
   <BaseHead />
   <body class="overflow-y-hidden">
     <slot />
